crates/eml_cli/tests/snapshots/integration__ui__run@effects__continuation_multi_calls.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/continuation_multi_calls.em
---
--- stdout ---
picked 1 and picked 2
picked 1
dropped
unused
<picked 2>/<picked 1>
--- stderr ---
