crates/eml_cli/tests/snapshots/integration__ui__run@effects__continuation_multi_passed.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/continuation_multi_passed.em
---
--- stdout ---
10,20
--- stderr ---
