crates/eml_cli/tests/snapshots/integration__ui__run@effects__continuation_partial.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/continuation_partial.em
---
--- stdout ---
110
--- stderr ---
