crates/eml_cli/tests/snapshots/integration__ui__run@effects__continuation_tail_and_non_tail.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/continuation_tail_and_non_tail.em
---
--- stdout ---
hello name! from place!
asked place
asked name
[hello name from place]
--- stderr ---
