crates/eml_cli/tests/snapshots/integration__ui__run@effects__continuation_values.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/continuation_values.em
---
--- stdout ---
40
14
--- stderr ---
