crates/eml_cli/tests/snapshots/integration__ui__run@effects__effect_drop_k.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/effect_drop_k.em
---
--- stdout ---
apple
dropped which
--- stderr ---
